--- a/Editor/Editor.GitDependencyResolver.asmdef
+++ b/Editor/Editor.GitDependencyResolver.asmdef
@@ -2,7 +2,9 @@
     "name": "Editor.GitDependencyResolver",
     "rootNamespace": "",
     "references": [],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
